cambios a botones en mostrar vehiculo